// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TravelContainer should have an error if error !== empty string  1`] = `
<section>
  <h2
    className="Travel-header"
  >
    Vice Travel News
  </h2>
  <div>
    <h2>
      No Travel Here
    </h2>
    <Link
      to="/Options"
    >
      Back
    </Link>
  </div>
  <div
    className="TravelContainer-wrapper Card-wrapper"
  />
</section>
`;

exports[`TravelContainer should match the snapshot 1`] = `
<section>
  <h2
    className="Travel-header"
  >
    Vice Travel News
  </h2>
  <div
    className="TravelContainer-wrapper Card-wrapper"
  >
    <Card
      key="i7NKjTrh4"
      title="New York"
    />
    <Card
      key="z5BwmowWqC"
      title="Boston"
    />
  </div>
</section>
`;

exports[`TravelContainer should render loading if allTravel.length is 0 and there is no error 1`] = `
<section>
  <h2
    className="Travel-header"
  >
    Vice Travel News
  </h2>
  <Loading />
  <div
    className="TravelContainer-wrapper Card-wrapper"
  />
</section>
`;
